fix spacing

--- a/src/forms/components/inputs/_input.scss
+++ b/src/forms/components/inputs/_input.scss
@@ -27,6 +27,7 @@
 
 .dropDownOverride{
     width: auto;
+    margin-bottom: 1rem;
 }
 
 .dropDownOverride > div > div{
